manifests/read.yml
apiVersion: v1
kind: Namespace
metadata:
  name: debug-access-ns
